--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,25 @@
         }
     })();
 </script>
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyB8Fl9NvkF8nCpzTYEHwLQjc6PKW8kDzMA",
+        authDomain: "webcounter-d.firebaseapp.com",
+        databaseURL: "https://webcounter-d-default-rtdb.firebaseio.com",
+        projectId: "webcounter-d",
+        storageBucket: "webcounter-d.appspot.com",
+        messagingSenderId: "8007664912",
+        appId: "1:8007664912:web:c1eb84b13e899bfb611195"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
